<resources>
    <string name="app_name">T6 Timesheet</string>
    <string name="ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="delete_all_entries">Delete All Entries</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_delete_scout">Are you sure?</string>
    <string name="dialog_delete_all_scouts">Are you sure?</string>
    <string name="scout_obj_key">scout</string>
    <string-array name="am_pm">
        <item>AM</item>
        <item>PM</item>
    </string-array>
    <string name="session_object_key">sessionObjectKey</string>

    <!-- Main menu function names, these are the names of buttons on the main activity menu -->
    <string name="main_menu_export_excel">Export Spreadsheet (XLSX)</string>
    <string name="main_menu_export_excel_old">Export Spreadsheet (XLS)</string>
    <string name="main_menu_export_text">Export CSV</string>
    <string name="main_menu_set_money_earned">Set Total Money Earned</string>
    <string name="main_menu_clear_entries">Clear Entries</string>
    <string name="main_menu_toggle_theme">Use Dark Theme</string>
</resources>
